fix menu overflow

--- a/app/client/packages/design-system/widgets/src/components/Popover/src/styles.module.css
+++ b/app/client/packages/design-system/widgets/src/components/Popover/src/styles.module.css
@@ -3,5 +3,4 @@
   border-radius: var(--border-radius-elevation-3);
   z-index: var(--z-index-99);
   box-shadow: var(--box-shadow-1);
-  overflow-y: auto;
 }
